@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 17, 2010</p>
+      <p>Last Updated: November 19, 2010</p>
     </td>
   </tr>
 </table>
@@ -1989,6 +1989,11 @@ nuttx-5.14 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* sched/timer_settime.c - Fix an error in set-up of one-shot timer.  It was
 	  using the repititive timer value (which is zero in the one-shot case,
 	  always resulting in a 10Ms timer!  Found and fixed by Wilton Tong.
+	* arch/arm/src/lpc17xx/lpc17_vector.S, stm32/stm32_vector.S, lm3s/lm3s_vector.S,
+	  sam3u/sam3u_vector.S -- Fixed a hard fault problem that can occur if certain
+	  types of interrupts are pending at the time another interrupt returns
+	  (SYSTICK).  This has not been verified on all plaform, but is a critical
+	  fixed that is needed by all Cortex-M3 NuttX users.
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
